[Mac][Material Design] Rework how location bar shadow is drawn.

The location bar in Material Design has a very faint line of shadow
beneath it in Incognito mode. I originally accomplished this by drawing
it within the bounds of the location bar but by borrowing a pixel row I
changed the height of the interior of the location bar, causing items
within the bar to no longer be vertically centered. This change moves
the shadow into a separate view.

R=avi@chromium.org
BUG=594847

Review-Url: https://codereview.chromium.org/1905163002
Cr-Commit-Position: refs/heads/master@{#390115}

Former-commit-id: c1bb0685bfb2257b22548240af9c622402697780